force-app/main/default/objects/SESOC__Package__c/SESOC__Package__c.object-meta.xml
<CustomObject>
    <description>E-Signature Document Packages</description>
    <label>Package</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>