force-app/main/default/objects/SESOC__Package__c/fields/SESOC__Datetime_Package_Complete__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Datetime_Package_Complete__c</fullName>
    <description>The system automatically populates this datetime field to track the time the package completed.</description>
    <label>Date/Time Package Complete</label>
    <type>DateTime</type>
</CustomField>