force-app/main/default/objects/SESOC__Package__c/fields/SESOC__Status__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Status__c</fullName>
    <description>The system automatically populates this required picklist to track the status of the package. By default, it is Created.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Timed Out</fullName>
            </value>
            <value>
                <fullName>Pending Document Download</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>