force-app/main/default/objects/SESOC__Package__c/fields/SESOC__VendorPlugin__c.field-meta.xml
<CustomField>
    <fullName>SESOC__VendorPlugin__c</fullName>
    <description>The system automatically populates this text field to track the vendor plug-in used to created this record.</description>
    <label>Vendor Plug-in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>